fix(nav): remove gap from container to improve layout consistency

--- a/src/app/features/nav/nav.component.scss
+++ b/src/app/features/nav/nav.component.scss
@@ -11,7 +11,6 @@
   &__container {
     align-items: center;
     display: grid;
-    gap: 1rem;
     grid-template-columns: auto 1fr auto;
     margin: 0 auto;
     max-width: 1280px;
